--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,7 +100,7 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 
 # -- urlview -------------------------------------------------------------------
 
-bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
+bind Y run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
 
 
 # -- facebook pathpicker -------------------------------------------------------
@@ -162,6 +162,22 @@ bind b list-buffers  # list paste buffers
 bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
 
 # -- user defined overrides ----------------------------------------------------
 
@@ -1184,3 +1200,4 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # }
 #
 # "$@"
+
